# cloude-cade

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.es.md  README.md  TEMPLATE.org  pyproject.toml
.claude/: settings.json
.claude/commands/: advance.md  babysit-ci.md  babysit-merge.md  drop.md  finalize.md  inbox.md  iterate.md  promote.md  suggest-slugs-watch.md  suggest-slugs.md  sweep.md
.github/workflows/: ci.yml  test.yml
docker/: cloude-settings.json  entrypoint.sh
docs/: internals.md
repo-hooks/: cloude-cade
tasks/: TEMPLATE.org
tests/: conftest.py  test_cloude_org.py  test_cloude_run.py  test_cloude_stages.py  test_dash.py  test_finalize_cleanup.py  test_hooks.py  test_listings.py  test_on_inbox.py  test_on_plan_accepted.py  test_on_stop.py  test_on_user_prompt.py  test_on_user_question.py  test_promote.py  test_read_inbox.py  test_remove_staging_entry.py  test_render.py  test_render_task_file.py  test_render_taskfile.py  test_seed_log_entry.py  test_send_message.py  test_set_staging_slug.py  test_stage_drift.py  test_task_set_state.py  test_workflow_cli.py  test_workflow_loader.py
tests/fixtures/: CLAUDE.default.md  CLAUDE.solo.md  TEMPLATE.solo.org  staging.org
workflows/: default.toml  solo.toml
